force-app/main/default/objects/APT_Quote_Lodgement_Point__c/APT_Quote_Lodgement_Point__c.object-meta.xml
<CustomObject>
    <label>Proposal Lodgement Point</label>
    <nameField>
        <displayFormat>QLP-{000}</displayFormat>
        <label>Proposal Lodgement Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Lodgement Point</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>