force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>APT_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipName>Quote_Lodgement_Point</relationshipName>
    <type>Lookup</type>
</CustomField>