force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Lodgement_Point_Lookup__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Point_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lodgement Point</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipName>Quote_Lodgement_Point</relationshipName>
    <type>Lookup</type>
</CustomField>