force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Lodgement_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone__c</fullName>
    <label>Lodgement Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>