force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Proposal_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Line Item</label>
    <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
    <relationshipName>Quote_Lodgement_Point</relationshipName>
    <type>Lookup</type>
</CustomField>