force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Quote_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Quote_Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>Quote_Lodgement_Point</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>