force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Selected_Lodgement_Point__c.field-meta.xml
<CustomField>
    <fullName>APT_Selected_Lodgement_Point__c</fullName>
    <label>Selected Lodgement Point</label>
    <type>TextArea</type>
</CustomField>