force-app/main/default/objects/APT_Quote_Lodgement_Point__c/fields/APT_Transport_Capability__c.field-meta.xml
<CustomField>
    <fullName>APT_Transport_Capability__c</fullName>
    <label>Transport Capability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAN Only</fullName>
            </value>
            <value>
                <fullName>TRUCK Only</fullName>
            </value>
            <value>
                <fullName>VAN &amp; TRUCK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>